--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_BASE_URL="https://localhost:3000"
-NEXTAUTH_URL="http://pishro-0.vercel.app"
-NEXT_PUBLIC_API_URL="https://pishro-0.vercel.app/api/admin"
+NEXTAUTH_URL="https://pishro-0.vercel.app"
+NEXT_PUBLIC_API_URL="https://pishro-0.vercel.app/api"
 DATABASE_URL="file:./dev.db"
 
